# NEATML

./: .gitignore  CHANGEMENTS.md  GPU_OPTIMIZATION.md  HYPERNEAT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RÉSUMÉ_FR.md  cartpole_vis.ml  dune  dune-project  evolution.ml  flappy_net  main.ml  neat.ml  snake_net  test.ml  test_affine.ml  test_xor.ml  visualizer.ml
src/: cartpole.ml  dune  evolution.ml  genome.ml  hyperneat.ml  innovation.ml  mutation.ml  neat.ml  neural.ml  parser.ml  phenotype.ml  speciation.ml  types.ml  visualizer.ml
src/neural/core/: gpu.ml  gpu.ml.backup  gpu.mli  gpu_mps.ml  gpu_new.ml  gradients.ml  gradients.mli  tensor.ml  utils.ml  utils.mli
src/neural/core/mps_stubs/: README.md  dune  mps_stubs.h  mps_stubs.mm
src/neural/layers/: activations.ml  activations.mli  conv2d.ml  conv2d.mli  dropout.ml  dropout.mli  layer.ml  layer.mli  linear.ml  linear.mli  pooling.ml  pooling.mli
src/neural/models/: sequential.ml  sequential.mli
src/neural/training/: errors.ml  errors.mli  metrics.ml  metrics.mli  optimizer.ml  optimizer.mli
test/: cellular_automaton.ml  cellular_continuous.ml  density_class  density_class_continuous  density_continuous.ml  density_continuous.neat  dune  flappy.ml  language.ml  mnist.ml  pattern.ml  sine.ml  snake.ml  test_hyperneat.ml  test_metrics.ml  xor_nn.ml
tests/: snake.ml  test_affine.ml  test_snake.ml  test_xor.ml
