(executables
(names flappy cellular_automaton cellular_continuous snake density_continuous xor_nn sine mnist test_metrics)
 (modules flappy cellular_automaton cellular_continuous snake density_continuous xor_nn sine mnist test_metrics)
 (libraries graphics unix neatml)
)

(executable
 (name test_hyperneat)
 (modules test_hyperneat)
 (libraries unix neatml)
)
